--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">= 7.0.0"
   },
-  "main": "index.js",
+  "main": "build/index.js",
   "peerDependencies": {
     "react": "^15.5.4"
   },
