--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^15.5.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register --require ./build/src/spec/testHelper -r jsdom-global/register './build/src/spec/*.spec.js'",
     "start": "webpack --watch",
     "build": "webpack"
   },
@@ -48,18 +48,28 @@
     "webpack": "^2.6.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.10",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.2",
-    "url-loader": "^0.6.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1"
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.10",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jsdom": "11.6.2",
+    "jsdom-global": "3.0.2",
+    "jsom": "^1.0.0",
+    "mocha": "^5.0.4",
+    "mocha-image-compiler": "^1.0.0",
+    "mocha-jsdom": "^1.1.0",
+    "node-sass": "^4.7.2",
+    "react-dom": "^16.2.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.2",
+    "url-loader": "^0.6.2"
   }
 }
