--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "css-loader": "^0.28.10",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "jasmine": "^3.1.0",
     "jsdom": "11.6.2",
     "jsdom-global": "3.0.2",
     "jsom": "^1.0.0",
@@ -69,6 +70,7 @@
     "node-sass": "^4.7.2",
     "react-dom": "^16.2.0",
     "sass-loader": "^6.0.7",
+    "sinon": "^4.4.6",
     "style-loader": "^0.20.2",
     "url-loader": "^0.6.2"
   }
