--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^15.5.4"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./build/src/spec/testHelper -r jsdom-global/register './build/src/spec/*.spec.js'",
+    "test": "mocha --compilers js:babel-core/register --require ./build/src/spec/testHelper -r jsdom-global/register --exit './build/src/spec/*.spec.js'",
     "start": "webpack --watch",
     "build": "webpack"
   },
@@ -44,6 +44,9 @@
   "homepage": "https://github.com/retrofuturejosh/react-modular-audio-player",
   "dependencies": {},
   "devDependencies": {
+    "prop-types": "^15.6.1",
+    "react": "^16.8.0",
+    "webpack": "^2.6.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.0.0",
@@ -64,13 +67,10 @@
     "mocha-image-compiler": "^1.0.0",
     "mocha-jsdom": "^1.1.0",
     "node-sass": "^4.12.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.8.0",
     "sass-loader": "^6.0.7",
     "sinon": "^4.4.6",
     "style-loader": "^0.20.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^2.6.1"
+    "url-loader": "^0.6.2"
   }
 }
